<resources>
    <string name="app_name">Task!</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_me">Me</string>
    <string name="title_my_teams">My Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opne_nav">Open Nav</string>
    <string name="close_nav">Close nav</string>
    <string name="search_your_colleagues">Search your colleagues</string>
    <string name="person_1">Person 1</string>
    <string name="days_off">days off</string>
    <string name="holiday">Holiday</string>
    <string name="date">Date</string>
    <string name="employee_directory">Employee Directory</string>
    <string name="search_icon">Search Icon</string>
    <string name="apply_nleave">Apply\nLeave</string>
    <string name="raise_nticket">Raise\nTicket</string>
    <string name="raise_nexpense">Raise\nExpense</string>
    <string name="leave_nbalance">Leave\nBalance</string>
    <string name="shift_today_general_9_00_am_06_00pm">SHIFT TODAY : GENERAL(9:00 AM - 06:00PM)</string>
    <string name="_26_jan_friday_n0h_8h">26 Jan Friday \n0h/8h</string>
    <string name="neha_deshpande_made_an_nannouncement_n23_jan">Neha Deshpande made an \nannouncement\n23 jan</string>
    <string name="get_ready_for_keka_josh_cultural_nactivities_ahead">Get Ready for KEKA JOSH - Cultural\nActivities Ahead!</string>
    <string name="dear_keka_superstars_n_nfantastic_news_awaits_you_dsfkajvnsczxlkvjdsclkxzvjdsklcxzjvnczvxkblkdsjcvblkdcjzxvcxzvkljbsdklczxvjbdkzcxjvcgkvxznflzdjkxcvnxczn_vj_gkvjbefsdljvkndm_sfxc">Dear Keka Superstars,\n\nFantastic news awaits you! dsfkajvnsczxlkvjdsclkxzvjdsklcxzjvnczvxkblkdsjcvblkdcjzxvcxzvkljbsdklczxvjbdkzcxjvcgkvxznflzdjkxcvnxczn,vj gkvjbefsdljvkndm,sfxc</string>
    <string name="see_all_announcements">See all announcements</string>
    <string name="off_this_week">Off this week</string>
    <string name="upcoming_holidays">Upcoming Holidays</string>
    <string name="wish_them">Wish them</string>
    <string name="announcements">Announcements</string>
    <string name="there_ar_no_pending_items_in_your_inbox_to_approve_or_reject">There ar no pending items in your inbox to approve or reject</string>
    <string name="no_inbox_item">No Inbox Item</string>
    <string name="archive">Archive</string>
    <string name="view_all_requests_history_from_here">View all Requests History from here</string>
    <string name="attendance">Attendance</string>
    <string name="view_history_for_nattendance_requests_n">View history for\nattendance requests\n</string>
    <string name="request_history">Request History</string>
    <string name="ticket_history">Ticket history</string>
    <string name="tickets_you_re_following_stay_updated_here">Tickets you\'re following, Stay updated here</string>
    <string name="following">Following</string>
    <string name="track_your_ticket_s_status_here_n">Track your ticket\'s status here</string>
    <string name="logs_and_shifts">Logs and shifts</string>
    <string name="view_history_for_attendance_requests">View history for attendance requests</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="view_all_attendance_logs_here">View all attendance logs here</string>
    <string name="view_your_leave_balances_history_and_transactions">View your leave balances, history and transactions</string>
    <string name="leave_balances">Leave Balances</string>
    <string name="apply_for_your_next_leave_here">Apply for your next leave here</string>
    <string name="leave">Leave</string>
    <string name="personal_feedback">Personal Feedback</string>
    <string name="give_feedback_and_foster_a_culture_of_continuous_learning">Give feedback and foster a culture of continuous learning</string>
    <string name="take_a_moment_to_appreciate_your_peer_s_achievements">Take a moment to appreciate your peer\'s achievements</string>
    <string name="praise">Praise</string>
    <string name="performance">Performance</string>
    <string name="ticket_history_image">Ticket History image</string>
    <string name="following_image">Following image</string>
    <string name="salary">Salary</string>
    <string name="looks_like_payroll_is_disabled">Looks like payroll is disabled</string>
    <string name="add_claim_expenses">Add/Claim Expenses</string>
    <string name="create_expenses_advance_requests_mileage_tracking_per_diem_and_claim_them">Create expenses, advance requests, mileage tracking, per diem and claim them</string>
    <string name="expenses_and_payments_awaiting_approval">Expenses and payments awaiting approval</string>
    <string name="past_claims">Past Claims</string>
    <string name="all_claims_which_have_been_settled_or_rejected">All claims which have been settled or rejected</string>
    <string name="pending">Pending</string>
    <string name="expenses">Expenses</string>
</resources>