<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:fillViewport="true"
    android:scrollbars="none">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.TimeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/attendanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/attendanceText"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/circular_background"
                    android:padding="8dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logs_and_shifts"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all_attendance_logs_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="125dp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/attendanceText"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/circular_background"
                    android:padding="8dp"
                    android:src="@drawable/list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_history"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_history_for_attendance_requests" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leave_guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/leaveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/apply_leave_linear"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/leave_guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/leaveText"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/circular_background"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_flight_takeoff_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_leave"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_for_your_next_leave_here" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="@id/leave_guideline_middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/comp_off"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/leaveText"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/circular_background"
                    android:padding="8dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_balances"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_your_leave_balances_history_and_transactions" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/comp_off"
                android:layout_width="0dp"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/leave_guideline_middle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@id/apply_leave_linear"
                android:background="@drawable/layout_design"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/circular_background"
                    android:padding="8dp"
                    android:src="@drawable/monitor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_balances"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_your_leave_balances_history_and_transactions" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>




        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upcoming_holidays"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeHolidayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/upcomingHolidayText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp" />

    </LinearLayout>

</FrameLayout>
</ScrollView>